[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valuehead"
version = "0.1.0"
description = "Python SDK for the ValueHead agent trace evaluation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aradhye Agarwal", email = "aradhyeagarwal@gmail.com" },
]
keywords = ["ai", "agent", "evaluation", "observability", "llm", "traces"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://valuehead.ai"
Repository = "https://github.com/Aradhye2002/valuehead-sdk"
Documentation = "https://valuehead.ai"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
